--- a/account_payment_purchase/i18n/fr_FR.po
+++ b/account_payment_purchase/i18n/fr_FR.po
@@ -8,25 +8,26 @@ msgstr ""
 "Project-Id-Version: bank-payment (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-01-21 01:10+0000\n"
-"PO-Revision-Date: 2016-04-06 00:16+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2021-03-02 16:01+0100\n"
+"Last-Translator: Pascal GOUHIER <p.gouhier@khetys.fr>\n"
 "Language-Team: French (France) (http://www.transifex.com/oca/OCA-bank-"
 "payment-8-0/language/fr_FR/)\n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. module: account_payment_purchase
 #: model:ir.model,name:account_payment_purchase.model_account_invoice
 msgid "Invoice"
-msgstr ""
+msgstr "Facture"
 
 #. module: account_payment_purchase
 #: model:ir.model.fields,field_description:account_payment_purchase.field_purchase_order__payment_mode_id
 msgid "Payment Mode"
-msgstr ""
+msgstr "Mode de paiement"
 
 #. module: account_payment_purchase
 #: model:ir.model,name:account_payment_purchase.model_purchase_order
@@ -40,32 +41,35 @@ msgid ""
 "the payment. This field is copied from the partner and will be copied to the "
 "supplier invoice."
 msgstr ""
+"Selectionnez le compte bancaire du fournisseur sur lequel votre société "
+"devra effectuer le règlement. Ce champ est copié depuis le partenaire et "
+"sera recopié sur la facture fournisseur."
 
 #. module: account_payment_purchase
 #: code:addons/account_payment_purchase/models/account_invoice.py:19
 #, python-format
 msgid "Selected purchase order have different payment mode."
-msgstr ""
+msgstr "Le bon de commande sélectionné a un mode de paiement différente."
 
 #. module: account_payment_purchase
 #: code:addons/account_payment_purchase/models/account_invoice.py:27
 #, python-format
 msgid "Selected purchase order have different supplier bank."
-msgstr ""
+msgstr "Le bon de commande sélectionné a une banque fournisseur différente."
 
 #. module: account_payment_purchase
 #: model:ir.model,name:account_payment_purchase.model_stock_rule
 msgid "Stock Rule"
-msgstr ""
+msgstr "Règle de stock"
 
 #. module: account_payment_purchase
 #: model:ir.model.fields,field_description:account_payment_purchase.field_purchase_order__supplier_partner_bank_id
 msgid "Supplier Bank Account"
-msgstr ""
+msgstr "Compte bancaire du fournisseur"
 
 #. module: account_payment_purchase
 #: code:addons/account_payment_purchase/models/account_invoice.py:18
 #: code:addons/account_payment_purchase/models/account_invoice.py:26
 #, python-format
 msgid "Warning"
-msgstr ""
+msgstr "Avertissement"
